g8Test logging